--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:weightSum="10"
     android:orientation="vertical"
     android:background="@drawable/login"
-    tools:context=".mainActivities.LoginActivity">
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+    tools:context=".loginsignup.loginActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -42,16 +42,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
-
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
 
     <EditText
-        android:id="@+id/Username"
+        android:id="@+id/username"
         android:layout_marginTop="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:background="@drawable/input"
+        android:background="@drawable/input"
         android:ems="10"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="50dp"
@@ -138,6 +138,7 @@
         android:layout_marginRight="30dp"
         android:gravity="right">
     <ImageView
+        android:id="@+id/login"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginRight="22dp"
@@ -152,6 +153,7 @@
 
             android:gravity="center_vertical">
             <TextView
+                android:id="@+id/gotoregister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/greyish"
