--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
 
     <EditText
         android:id="@+id/Username"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:background="@drawable/input"
@@ -118,6 +118,11 @@
 <!--        android:text="Verify OTP"-->
 <!--         />-->
 <!--</LinearLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="bottom">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -148,7 +153,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="40dp"
 
             android:gravity="center_vertical">
             <TextView
@@ -174,6 +180,7 @@
 
                 android:textStyle="bold"/>
             </LinearLayout>
+        </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
