--- a/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PrivacyPolicy">
+    tools:context=".mainActivities.PrivacyPolicy">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
