google sign and phone auth signin

--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
       android:gravity="bottom"
 
       android:orientation="vertical"
-      android:layout_weight="4">
+      android:layout_weight="4">a
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -122,9 +122,9 @@
 <!--</LinearLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="bottom">
+            android:gravity="start">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -156,8 +156,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="0dp"
 
             android:gravity="center_vertical">
             <TextView
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/greyish"
                 android:layout_marginLeft="45dp"
-                android:textSize="19sp"
+                android:textSize="25dp"
                 android:text="@string/Signup"
                 android:textStyle="bold"/>
             <LinearLayout
@@ -179,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/greyish"
 
-                android:textSize="19sp"
+                android:textSize="25dp"
                 android:text="@string/forget"
 
                 android:textStyle="bold"/>
@@ -187,4 +187,17 @@
         </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.gms.common.SignInButton
+            android:layout_gravity="center"
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
