--- a/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
@@ -17,58 +17,58 @@
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:src="@drawable/information"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginRight="20dp"
-            android:gravity="right">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orienation="horizontal"
-               >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Group"
-                    android:layout_marginLeft="16dp"
-                    android:id="@+id/group"
-                    android:layout_marginTop="15dp"
-                    android:textColor="@color/white"
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:gravity="right">-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orienation="horizontal"-->
+<!--                >-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Group"-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    android:id="@+id/group"-->
+<!--                    android:layout_marginTop="15dp"-->
+<!--                    android:textColor="@color/white"-->
 
-                    android:textSize="20sp"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:layout_marginRight="10dp">
+<!--                    android:textSize="20sp"/>-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="right"-->
+<!--                    android:layout_marginRight="10dp">-->
 
 
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="48dp"
-            android:id="@+id/companylogo"
-            android:src="@drawable/privacy"/>
-                </LinearLayout>
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company Name"
-                android:id="@+id/companyname"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/white"/>
-        </LinearLayout>
+<!--                    <ImageView-->
+<!--                        android:layout_width="50dp"-->
+<!--                        android:layout_height="48dp"-->
+<!--                        android:id="@+id/companylogo"-->
+<!--                        android:src="@drawable/privacy"/>-->
+<!--                </LinearLayout>-->
+<!--            </LinearLayout>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Company Name"-->
+<!--                android:id="@+id/companyname"-->
+<!--                android:textSize="20sp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginTop="12dp"-->
+<!--                android:layout_marginBottom="10dp"-->
+<!--                android:textColor="@color/white"/>-->
+<!--        </LinearLayout>-->
     </LinearLayout>
 
-   <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-       android:layout_width="match_parent"
-       android:layout_height="160dp"/>
+    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+        android:layout_width="match_parent"
+        android:layout_height="160dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -122,46 +122,46 @@
                         android:layout_height="60dp"
                         android:layout_marginTop="3dp">
 
-<!--                        <ProgressBar-->
-<!--                            -->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="match_parent"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            style="?android:progressBarStyleHorizontal"-->
-<!--                            android:max="100"-->
-<!--                            android:progress="40"-->
-<!--                           -->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            tools:progress="40">-->
+                        <!--                        <ProgressBar-->
+                        <!--                            -->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="match_parent"-->
+                        <!--                            app:layout_constraintEnd_toEndOf="parent"-->
+                        <!--                            app:layout_constraintStart_toStartOf="parent"-->
+                        <!--                            style="?android:progressBarStyleHorizontal"-->
+                        <!--                            android:max="100"-->
+                        <!--                            android:progress="40"-->
+                        <!--                           -->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"-->
+                        <!--                            tools:progress="40">-->
 
-<!--                        </ProgressBar>-->
+                        <!--                        </ProgressBar>-->
 
-<!--                        <TextView-->
-<!--                           -->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintHorizontal_bias="0.5"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            android:text="60"-->
-<!--                            android:textColor="#FF533D78"-->
-<!--                            android:textStyle="bold"/>-->
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="%"-->
-<!--                            android:textColor="#FF533D78"-->
-<!--                            android:textStyle="bold"-->
-<!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+                        <!--                        <TextView-->
+                        <!--                           -->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+                        <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+                        <!--                            app:layout_constraintEnd_toEndOf="parent"-->
+                        <!--                            app:layout_constraintHorizontal_bias="0.5"-->
+                        <!--                            app:layout_constraintStart_toStartOf="parent"-->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"-->
+                        <!--                            android:text="60"-->
+                        <!--                            android:textColor="#FF533D78"-->
+                        <!--                            android:textStyle="bold"/>-->
+                        <!--                        <TextView-->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:text="%"-->
+                        <!--                            android:textColor="#FF533D78"-->
+                        <!--                            android:textStyle="bold"-->
+                        <!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+                        <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
 
-<!--                            app:layout_constraintHorizontal_bias="0.5"-->
-<!--                            app:layout_constraintStart_toEndOf="@id/text_view_progress"-->
-<!--                            app:layout_constraintTop_toTopOf="parent"/>-->
+                        <!--                            app:layout_constraintHorizontal_bias="0.5"-->
+                        <!--                            app:layout_constraintStart_toEndOf="@id/text_view_progress"-->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"/>-->
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -192,46 +192,46 @@
                         android:layout_height="60dp"
                         android:layout_marginTop="3dp">
 
-<!--                        <ProgressBar-->
-<!--                            android:id="@+id/progress_bar"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="match_parent"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            style="?android:progressBarStyleHorizontal"-->
-<!--                            android:max="100"-->
-<!--                            android:progress="40"-->
-<!--                           -->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            tools:progress="40">-->
+                        <!--                        <ProgressBar-->
+                        <!--                            android:id="@+id/progress_bar"-->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="match_parent"-->
+                        <!--                            app:layout_constraintEnd_toEndOf="parent"-->
+                        <!--                            app:layout_constraintStart_toStartOf="parent"-->
+                        <!--                            style="?android:progressBarStyleHorizontal"-->
+                        <!--                            android:max="100"-->
+                        <!--                            android:progress="40"-->
+                        <!--                           -->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"-->
+                        <!--                            tools:progress="40">-->
 
-<!--                        </ProgressBar>-->
+                        <!--                        </ProgressBar>-->
 
-<!--                        <TextView-->
-<!--                            -->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintHorizontal_bias="0.5"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            android:text="60"-->
-<!--                            android:textColor="#FF533D78"-->
-<!--                            android:textStyle="bold"/>-->
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="%"-->
-<!--                            android:textColor="#FF533D78"-->
-<!--                            android:textStyle="bold"-->
-<!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+                        <!--                        <TextView-->
+                        <!--                            -->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+                        <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+                        <!--                            app:layout_constraintEnd_toEndOf="parent"-->
+                        <!--                            app:layout_constraintHorizontal_bias="0.5"-->
+                        <!--                            app:layout_constraintStart_toStartOf="parent"-->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"-->
+                        <!--                            android:text="60"-->
+                        <!--                            android:textColor="#FF533D78"-->
+                        <!--                            android:textStyle="bold"/>-->
+                        <!--                        <TextView-->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:text="%"-->
+                        <!--                            android:textColor="#FF533D78"-->
+                        <!--                            android:textStyle="bold"-->
+                        <!--                            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+                        <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
 
-<!--                            app:layout_constraintHorizontal_bias="0.5"-->
-<!--                           -->
-<!--                            app:layout_constraintTop_toTopOf="parent"/>-->
+                        <!--                            app:layout_constraintHorizontal_bias="0.5"-->
+                        <!--                           -->
+                        <!--                            app:layout_constraintTop_toTopOf="parent"/>-->
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -250,7 +250,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="15dp"
 
-android:layout_marginTop="25dp"
+            android:layout_marginTop="25dp"
             app:cardElevation="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
