--- a/StartupCarvaan/app/src/main/res/layout/activity_splash_screen.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".mainActivities.SplashScreen">
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="134dp"
+        android:layout_height="76dp"
+        android:text="logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
