--- a/StartupCarvaan/app/src/main/res/layout/fragment_allshares.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_allshares.xml
@@ -6,9 +6,10 @@
     tools:context=".fragments.allshares.allshares">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="woohoo all the shares are here" />
+        tools:listitem="@layout/z_single_allshare">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
