--- a/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+android:background="@color/greyish"
         android:orientation="vertical"
-        android:background="@color/greyish">
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -29,102 +29,23 @@
                 android:layout_marginTop="35dp"
                 android:layout_marginRight="35dp"
                 android:id="@+id/companylogo"
-                android:visibility="gone"
+
                 android:src="@drawable/privacy"/>
         </RelativeLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/afterpress"
-            android:layout_marginTop="15dp"
-            android:background="#DAD9D9"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginRight="30dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Buying price :  "
-                android:textSize="17sp"
-android:textColor="@color/greyish"
 
-                android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/buyingprice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="10"
-                    android:textColor="@color/black"
-
-
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Selling price :  "
-                    android:textSize="17sp"
-                    android:textColor="@color/greyish"
-
-                    android:textStyle="bold"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:id="@+id/sellingprice"
-                    android:textSize="17sp"
-                    android:textColor="@color/black"
-
-                    android:textStyle="bold"/>
-            </LinearLayout>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/greyish"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NextSlot "
-                android:textSize="17sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="30dp"
-                android:textColor="@color/greyish"
-
-                android:textStyle="bold"/>
-
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/lcompany"
-            android:visibility="gone"
+
             android:layout_marginRight="20dp"
             android:gravity="right">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="18dp"
-                android:orienation="horizontal"
+                android:orientation="horizontal"
                >
                 <TextView
                     android:layout_width="wrap_content"
@@ -140,6 +61,7 @@ android:textColor="@color/greyish"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
+                    android:orientation="horizontal"
                     android:layout_marginRight="10dp">
 
                     <TextView
@@ -161,12 +83,7 @@ android:textColor="@color/greyish"
         </LinearLayout>
     </LinearLayout>
 
-   <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-       android:layout_width="match_parent"
-       android:layout_marginLeft="30dp"
-       android:layout_marginRight="30dp"
-       android:visibility="gone"
-       android:layout_height="150dp"/>
+
 
 
 <!--        <LinearLayout-->
@@ -218,6 +135,8 @@ android:textColor="@color/greyish"
 <!--        </LinearLayout>-->
 
 
+
+    <!--LinearLayput1-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -225,16 +144,22 @@ android:textColor="@color/greyish"
         android:orientation="vertical"
         android:id="@+id/growth"
         android:visibility="gone"
+
         android:paddingRight="30dp"
         android:paddingLeft="30dp"
         android:paddingBottom="14dp"
-        android:paddingTop="25dp">
+        android:paddingTop="10dp">
+        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+            android:layout_width="match_parent"
+
+
+            android:layout_height="150dp"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:cardCornerRadius="15dp"
-
+android:layout_marginTop="20dp"
 
             app:cardElevation="20dp">
             <LinearLayout
@@ -252,6 +177,7 @@ android:textColor="@color/greyish"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_marginTop="8dp"
+
 
                     android:orientation="vertical">
                     <TextView
@@ -424,6 +350,116 @@ android:textColor="@color/greyish"
 
 
     </LinearLayout>
+
+    <!--Linear Layout 2-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/afterpress"
+
+        android:layout_marginTop="10dp"
+        android:background="#DAD9D9"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="30dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Buying price :  "
+                android:textSize="17sp"
+                android:textColor="@color/greyish"
+
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/buyingprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="10"
+                android:textColor="@color/black"
+
+
+                android:textSize="17sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="30dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selling price :  "
+                android:textSize="17sp"
+                android:textColor="@color/greyish"
+
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10"
+                android:id="@+id/sellingprice"
+                android:textSize="17sp"
+                android:textColor="@color/black"
+
+                android:textStyle="bold"/>
+        </LinearLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/greyish"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NextSlot "
+            android:textSize="17sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:textColor="@color/greyish"
+
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="12dp"
+            android:gravity="center_vertical"
+            android:layout_marginRight="30dp">
+            <ImageView
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/idea"
+               />
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+android:layout_marginLeft="10dp"
+                android:text="advice"
+                android:textColor="@color/black"
+
+
+                android:textSize="17sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:background="#DAD9D9"
